Dodany HidenVM (View model)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,11 @@ android {
 
 dependencies {
 
+    // Libraries
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
     // Java language implementation
     implementation "androidx.fragment:fragment:1.2.5"
-
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
