--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MenuActivity"></activity>
-        <activity android:name=".HideActivity"></activity>
-        <activity android:name=".UnhideActivity"></activity>
+        <activity android:name=".EncodeActivity"></activity>
+        <activity android:name=".DecodeActivity"></activity>
     </application>
 
 </manifest>
